--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,8 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	<!-- utf-8 한글처리 -->
+	
 	<filter>
       <filter-name>encodingFilter</filter-name>
       <filter-class>
